Added new toggle() method to toggle between seismic displays.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,9 @@ include-package-data = true
 package-dir = { "" = "./" }
 
 [tool.setuptools.package-data]
+
+"img" = [ "*.png", "*.apng" ]
+
 "docs" = [ "*.html" ]
 
 "examples" = [ "*.ipynb", "data/README", "data/cmp.npy", "data/vmod.npy" ]
