--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,14 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=77.0"]
 
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "seisplot"
+
+license = "LGPL-3.0-or-later"
+
+license-files = ["LICEN[CS]E*"]
 
 dynamic = ["version"]
 
@@ -20,11 +24,10 @@ description = "Plotting of seismic data"
 
 readme = "README.md"
 
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
     "Operating System :: OS Independent",
 ]
 
@@ -53,10 +56,5 @@ include-package-data = true
 package-dir = { "" = "./" }
 
 [tool.setuptools.package-data]
-
-"img" = [ "*.png", "*.apng" ]
-
-"docs" = [ "*.html" ]
-
-"examples" = [ "*.ipynb", "data/README", "data/cmp.npy", "data/vmod.npy" ]
-
+"img" = [ "*.png" ]
+i
